--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,9 @@ bower_components
 # Compiled binary addons (http://nodejs.org/api/addons.html)
 build/Release
 
+#Build de vite
+dist/
+
 # Dependency directories
 node_modules/
 
